# ah_bonus_shopping_agent

./: .gitignore  PROJECT_SUMMARY.md  README.md  README_AUTO_MODE.md  base_scraper.py  bonus_products.json  bucket_generator.py  cart_automation.py  config.py  eerder_gekocht_products.json  email_notifier.py  example.py  example_usage.py  main.py  previous_buy_scraper_main.py  pyproject.toml  requirements.txt  scraper.py  session_manager.py  shopping_agent.py  test_llama_index.ipynb
prompts/: default_prompt.txt
static/: cart.html  index.html
